# crm

./: Cargo.toml  Makefile  README.md  cliff.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: app.rs  client.rs  config.rs  lib.rs  main.rs  server.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs  mod.rs
protos/: crm.proto
protos/crm/: crm.proto  messages.proto
protos/metadata/: messages.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto
user-stat/: Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: test.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: mod.rs  user_stats.rs
user-stat/tests/: service.rs
