[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.42"
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
