[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.42"
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
proto-builder-trait = "0.6.1"
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.13.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
user-stat = { path = "./user-stat" }
