[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_utils = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = "0.12.1"
prost = { workspace = true }
crm-metadata = { workspace = true }
uuid = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fake = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = "0.6.1"
tonic-build = { workspace = true }

[dev-dependencies]
nanoid = { workspace = true }
crm-send = { workspace = true, features = ["test_utils"] }
