[package]
name = "crm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
derive_builder = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
user-stat = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
# prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
